<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/logreg_background"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:text="@string/appnameregister"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/txtUsernameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="textPersonName"

        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtPasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtConPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnRegis"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtLoginR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>