<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/logreg_background"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginlog"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="35sp"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/usernamelog"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/passwordlog"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnloginlog"
        android:textSize="20sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtlRegis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/buat_akunlog"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>